--- a/templates/jobs/searchjobs/search-controller.twig
+++ b/templates/jobs/searchjobs/search-controller.twig
@@ -1,124 +1,181 @@
 <div class="pb-5 bg-light" style="">
-     <!-- Job controller -->
-     <div class="container jobDetails pb-5 cards-section bg-white">
-         <div class="row">
-
-             {# left side #}
-             <div class="col-md-6" style="">
-                 <form action="{{ url('jobs/searchjobs/results') }}">
-                     <div class="bg-light p-3">
-                         <div class="row">
-                             <div class="col-md-12">
-                                 <div class="form-row">
-                                     <div class="form-group col-md-12">
-                                         <label for="city" hidden="">City</label>
-                                         <input id="city" name="city" type="text" class="form-control"
-                                             placeholder="city" />
-                                     </div>
-                                     <div class="form-group col-md-12">
-                                         <label for="inputState" hidden="">State</label>
-                                         <select name="state" class="form-control" id="">
-                                             <option value="" selected="selected">Select a State</option>
-                                             <option value="AL">Alabama</option>
-                                             <option value="AK">Alaska</option>
-                                             <option value="AZ">Arizona</option>
-                                             <option value="AR">Arkansas</option>
-                                             <option value="CA">California</option>
-                                             <option value="CO">Colorado</option>
-                                             <option value="CT">Connecticut</option>
-                                             <option value="DE">Delaware</option>
-                                             <option value="DC">District Of Columbia</option>
-                                             <option value="FL">Florida</option>
-                                             <option value="GA">Georgia</option>
-                                             <option value="HI">Hawaii</option>
-                                             <option value="ID">Idaho</option>
-                                             <option value="IL">Illinois</option>
-                                             <option value="IN">Indiana</option>
-                                             <option value="IA">Iowa</option>
-                                             <option value="KS">Kansas</option>
-                                             <option value="KY">Kentucky</option>
-                                             <option value="LA">Louisiana</option>
-                                             <option value="ME">Maine</option>
-                                             <option value="MD">Maryland</option>
-                                             <option value="MA">Massachusetts</option>
-                                             <option value="MI">Michigan</option>
-                                             <option value="MN">Minnesota</option>
-                                             <option value="MS">Mississippi</option>
-                                             <option value="MO">Missouri</option>
-                                             <option value="MT">Montana</option>
-                                             <option value="NE">Nebraska</option>
-                                             <option value="NV">Nevada</option>
-                                             <option value="NH">New Hampshire</option>
-                                             <option value="NJ">New Jersey</option>
-                                             <option value="NM">New Mexico</option>
-                                             <option value="NY">New York</option>
-                                             <option value="NC">North Carolina</option>
-                                             <option value="ND">North Dakota</option>
-                                             <option value="OH">Ohio</option>
-                                             <option value="OK">Oklahoma</option>
-                                             <option value="OR">Oregon</option>
-                                             <option value="PA">Pennsylvania</option>
-                                             <option value="RI">Rhode Island</option>
-                                             <option value="SC">South Carolina</option>
-                                             <option value="SD">South Dakota</option>
-                                             <option value="TN">Tennessee</option>
-                                             <option value="TX">Texas</option>
-                                             <option value="UT">Utah</option>
-                                             <option value="VT">Vermont</option>
-                                             <option value="VA">Virginia</option>
-                                             <option value="WA">Washington</option>
-                                             <option value="WV">West Virginia</option>
-                                             <option value="WI">Wisconsin</option>
-                                             <option value="WY">Wyoming</option>
-                                         </select>
-                                     </div>                                     
-                                         {# Select Truck Type #}
-                                         <div class="form-group col-md-12">
-                                             <select name="trucktype" class="form-control">
-                                                 <option value="">Select truck type</option>
-                                                 <option value="tanker">tanker</option>
-                                                 <option value="van">van</option>
-                                                 <option value="reefer">reefer</option>
-                                             </select>
-                                         </div>
-                                         {# Select Job Type #}
-                                         <div class="form-group col-md-12">
-                                             <select name="jobtype" class="form-control">
-                                                 <option value="">Select job type type</option>
-                                                 <option value="otr">OTR</option>
-                                                 <option value="regional">Regional</option>
-                                                 <option value="dedicated">Dedicated</option>
-                                                 <option value="local">Local</option>
-                                             </select>
-                                         </div>                                     
-                                 </div>
-                                 <div class="form-group">
-                                     <button type="submit" value="Search" class="btn btn-success btn-lg btn-block">
-                                         <i class="fas fa-search"></i> Search</button>
-                                 </div>
-                             </div>
-                         </div>
-                     </div>
-                 </form>
-             </div>
-
-             {# right Side #}
-             <div class="col-md-6">
-                 <form class="form searchByRadius" action="{{ url('jobs/searchjobs/radius-results') }}">
-                     <div class="form-group col-md-12">
-                         <label for="zip" hidden="">Zip</label>
-                         <input id="zip" name="zip" type="number" pattern="[0-9]*" class="form-control" placeholder="zip code" required/>
-                     </div>
-                     <div class="form-group col-md-12">
-                         <input id="range" name="range" type="number" pattern="[0-9]*" class="form-control bg-gray" placeholder="range in miles" required />
-                     </div>
-                      <div class="form-group col-md-12">
-                        <button type="submit" value="Search" class="btn btn-success btn-lg btn-block"> <i class="fas fa-search"></i> Search</button>
-                    </div>
-                 </form>
-             </div>
-
-
+    <!-- Job controller -->
+    <div class="container jobDetails pb-5 cards-section bg-white">
+        <div class="row">
+            <div class="col">
+                <h1 class="display-4 text-secondary text-center">Find Your Dream Job!</h1>
+            </div>            
         </div>
+
+        <div class="row">
+                <div class="col-md-6">
+                 <!-- Button trigger modal CITY STATE-->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#cityStateModal">
+                    Search by City &amp; State
+                </button>
+                </div>
+                <div class="col-md-6">
+                <!-- Button trigger modal RADIUS-->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#radiusZipModal">
+                    Search by ZIP &amp; Radius
+                </button></div>
+        </div>
+
+       
+
+<!-- Modal -->
+<div class="modal fade" id="cityStateModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="cityStateLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="cityStateLabel">SEARCH CITY / STATE</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+         <form action="{{ url('jobs/searchjobs/results') }}">
+                    <div class="bg-light p-3">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-row">
+                                    <div class="form-group col-md-12">
+                                        <label for="city" hidden="">City</label>
+                                        <input id="city" name="city" type="text" class="form-control"
+                                            placeholder="city" />
+                                    </div>
+                                    <div class="form-group col-md-12">
+                                        <label for="inputState" hidden="">State</label>
+                                        <select name="state" class="form-control" id="">
+                                            <option value="" selected="selected">Select a State</option>
+                                            <option value="AL">Alabama</option>
+                                            <option value="AK">Alaska</option>
+                                            <option value="AZ">Arizona</option>
+                                            <option value="AR">Arkansas</option>
+                                            <option value="CA">California</option>
+                                            <option value="CO">Colorado</option>
+                                            <option value="CT">Connecticut</option>
+                                            <option value="DE">Delaware</option>
+                                            <option value="DC">District Of Columbia</option>
+                                            <option value="FL">Florida</option>
+                                            <option value="GA">Georgia</option>
+                                            <option value="HI">Hawaii</option>
+                                            <option value="ID">Idaho</option>
+                                            <option value="IL">Illinois</option>
+                                            <option value="IN">Indiana</option>
+                                            <option value="IA">Iowa</option>
+                                            <option value="KS">Kansas</option>
+                                            <option value="KY">Kentucky</option>
+                                            <option value="LA">Louisiana</option>
+                                            <option value="ME">Maine</option>
+                                            <option value="MD">Maryland</option>
+                                            <option value="MA">Massachusetts</option>
+                                            <option value="MI">Michigan</option>
+                                            <option value="MN">Minnesota</option>
+                                            <option value="MS">Mississippi</option>
+                                            <option value="MO">Missouri</option>
+                                            <option value="MT">Montana</option>
+                                            <option value="NE">Nebraska</option>
+                                            <option value="NV">Nevada</option>
+                                            <option value="NH">New Hampshire</option>
+                                            <option value="NJ">New Jersey</option>
+                                            <option value="NM">New Mexico</option>
+                                            <option value="NY">New York</option>
+                                            <option value="NC">North Carolina</option>
+                                            <option value="ND">North Dakota</option>
+                                            <option value="OH">Ohio</option>
+                                            <option value="OK">Oklahoma</option>
+                                            <option value="OR">Oregon</option>
+                                            <option value="PA">Pennsylvania</option>
+                                            <option value="RI">Rhode Island</option>
+                                            <option value="SC">South Carolina</option>
+                                            <option value="SD">South Dakota</option>
+                                            <option value="TN">Tennessee</option>
+                                            <option value="TX">Texas</option>
+                                            <option value="UT">Utah</option>
+                                            <option value="VT">Vermont</option>
+                                            <option value="VA">Virginia</option>
+                                            <option value="WA">Washington</option>
+                                            <option value="WV">West Virginia</option>
+                                            <option value="WI">Wisconsin</option>
+                                            <option value="WY">Wyoming</option>
+                                        </select>
+                                    </div>
+                                    {# Select Truck Type #}
+                                    <div class="form-group col-md-12">
+                                        <select name="trucktype" class="form-control">
+                                            <option value="">Select truck type</option>
+                                            <option value="tanker">tanker</option>
+                                            <option value="van">van</option>
+                                            <option value="reefer">reefer</option>
+                                        </select>
+                                    </div>
+                                    {# Select Job Type #}
+                                    <div class="form-group col-md-12">
+                                        <select name="jobtype" class="form-control">
+                                            <option value="">Select job type type</option>
+                                            <option value="otr">OTR</option>
+                                            <option value="regional">Regional</option>
+                                            <option value="dedicated">Dedicated</option>
+                                            <option value="local">Local</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <button type="submit" value="Search" class="btn btn-success btn-lg btn-block">
+                                        <i class="fas fa-search"></i> Search</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+{# Radius Modal #}
+<div class="modal fade" id="radiusZipModal" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="radiusZipLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="radiusZipLabel">SEARCH CITY / STATE</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+         <form action="{{ url('jobs/searchjobs/radius-results') }}">
+                    <div class="bg-light p-3">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                         <label for="zip" hidden="">Zip</label>
+                                         <input id="zip" name="zip" type="number" pattern="[0-9]*" class="form-control" placeholder="zip code" />
+                                 </div>
+                                 <div class="form-group">                                     
+                                     <input id="range" name="range" type="number" pattern="[0-9]*" class="form-control bg-gray"
+                                  placeholder="range in miles" />
+                                 </div>
+                                <div class="form-group">
+                                    <button type="submit" value="Search" class="btn btn-success btn-lg btn-block">
+                                    <i class="fas fa-search"></i> Search</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+      </div>      
+    </div>
+  </div>
+</div>            
+
+      
     </div>
 </div>
